# PHAS0100-Research-Computing-with-Cpp-CW2

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  CalculateNumericalEnergyLoss.cpp  increaseScaleSystem.cpp  solarSystemSimulator.cpp
include/: acceleration.hpp  particle.hpp  systemSimulator.hpp
src/: CMakeLists.txt  acceleration.cpp  particle.cpp  systemSimulator.cpp
test/: test.cpp
